--- a/src/pug/medium.pug
+++ b/src/pug/medium.pug
@@ -2,11 +2,11 @@ extends _template/_base
 
 block vars
   - lev = 1
-  - stanzaIDs = ["medium_by_gmid", "organisms_by_gmid"]
+  - stanzaIDs = ["gmdb_medium_by_gmid", "gmdb_organisms_by_gmid"]
 
 block main
-  togostanza-medium_by_gmid#info(query="")
-  togostanza-organisms_by_gmid#organisms(query="")
+  togostanza-gmdb_medium_by_gmid#info(gm_id="")
+  togostanza-gmdb_organisms_by_gmid#organisms(gm_id="")
 
 block scripts
   script(src=`${pathToJS}media.js`)
