関連リスト作成中

--- a/src/pug/medium.pug
+++ b/src/pug/medium.pug
@@ -5,7 +5,9 @@ block vars
   - stanzaIDs = ["gmdb_medium_by_gmid", "gmdb_organisms_by_gmid"]
 
 block main
+  h2 Medium Information
   togostanza-gmdb_medium_by_gmid#info(gm_id="")
+  h2 Related Organisms
   togostanza-gmdb_organisms_by_gmid#organisms(gm_id="")
 
 block scripts
