--- a/src/pug/organism.pug
+++ b/src/pug/organism.pug
@@ -5,7 +5,7 @@ block vars
   - stanzaIDs = ["gmdb_organism_by_taxid", "media_by_taxid"]
 
 block main
-  h2 Organism Infomation
+  h2 Organism Information
   togostanza-gmdb_organism_by_taxid#info(query="")
   h2 Related Media
   togostanza-media_by_taxid#media(query="")
