--- a/src/stanza/gmdb_media_by_gmoid/templates/stanza.html
+++ b/src/stanza/gmdb_media_by_gmoid/templates/stanza.html
@@ -72,7 +72,7 @@
 {{#unless error}}
   <div class="wrapper">
     <h2>
-      Querying media with Taxonomy ID:
+      Querying media with GMO ID:
       {{#each result.query}}
         <span class="query-key">{{this}}</span>
       {{/each}}
