--- a/src/stanza/gmdb_organisms_by_gmid/templates/stanza.html
+++ b/src/stanza/gmdb_organisms_by_gmid/templates/stanza.html
@@ -69,7 +69,7 @@
 {{#unless error}}
   <div class="wrapper">
     <h2>
-      Querying organisms with tax_id:
+      Querying organisms with Growth Media ID:
       {{#each result.query}}
         <span class="query-key">{{this}}</span>
       {{/each}}
