--- a/src/pug/component.pug
+++ b/src/pug/component.pug
@@ -2,13 +2,13 @@ extends _template/_base
 
 block vars
   - lev = 1
-  - stanzaIDs = ["gmdb_component_by_gmoid", "media_by_gmoid"]
+  - stanzaIDs = ["gmdb_component_by_gmoid", "gmdb_media_by_gmoid"]
 
 block main
   h2 Component Information
   togostanza-gmdb_component_by_gmoid#info(gmo_id="")
   h2 Related Media
-  togostanza-media_by_gmoid#media(query="")
+  togostanza-gmdb_media_by_gmoid#media(gmo_id="")
 
 block scripts
   script(src=`${pathToJS}component.js`)
