--- a/src/pug/organism.pug
+++ b/src/pug/organism.pug
@@ -2,13 +2,13 @@ extends _template/_base
 
 block vars
   - lev = 1
-  - stanzaIDs = ["gmdb_organism_by_taxid", "media_by_taxid"]
+  - stanzaIDs = ["gmdb_organism_by_taxid", "gmdb_media_by_taxid"]
 
 block main
   h2 Organism Information
-  togostanza-gmdb_organism_by_taxid#info(query="")
+  togostanza-gmdb_organism_by_taxid#info(tax_id="")
   h2 Related Media
-  togostanza-media_by_taxid#media(query="")
+  togostanza-gmdb_media_by_taxid#media(tax_id="")
 
 
 block scripts
