--- a/src/stanza/gmdb_component_by_gmoid/templates/stanza.html
+++ b/src/stanza/gmdb_component_by_gmoid/templates/stanza.html
@@ -122,7 +122,7 @@
   {{/if}}
 
   {{#if result.super_classes}}
-      <h3>SUPER CLASS</h3>
+      <h3>SUPER CLASSES</h3>
       <ul class="id-list">
         {{#each result.super_classes}}
           <li>
@@ -134,11 +134,11 @@
   {{/if}}
 
   {{#if result.sub_classes}}
-      <h3>SUB CLASS</h3>
+      <h3>SUB CLASSES</h3>
       <ul class="id-list">
         {{#each result.sub_classes}}
           <li>
-            <span><a href="{{host}}/component/{{gmo_id}}" target="_blank">{{gmo_id}}</a></span>
+            <span><a href="{{host}}/component/{{gmo_id}}">{{gmo_id}}</a></span>
             <span>{{label_en}}</span>
           </li>
         {{/each}}
