サイトヘッダー、ロゴ設置

--- a/src/less/_include/variables.less
+++ b/src/less/_include/variables.less
@@ -7,6 +7,8 @@
 @color-black-text: #323333;
 @color-gray-text-light: #9a999a;
 
+@color-green: #8FC31F;
+
 @responsive-threshold1: 719px;
 @responsive-threshold2: 1119px;
 
