トップ infoのカラーを変更

--- a/src/less/main/top.less
+++ b/src/less/main/top.less
@@ -12,7 +12,7 @@ body.top{
     border: 1px solid #CCCCCC;
   }
   .info{
-    @base-color:#44b8cc;
+    @base-color: @color-green;
     display: block;
     width: 80%;
     max-width: 640px;
