各スタンザ カラーを緑に変更

--- a/src/less/_include/variables.less
+++ b/src/less/_include/variables.less
@@ -8,6 +8,7 @@
 @color-gray-text-light: #9a999a;
 
 @color-green: #8FC31F;
+@color-dark-green: #6FA80C;
 
 @responsive-threshold1: 719px;
 @responsive-threshold2: 1119px;
