--- a/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
+++ b/src/stanza/gmdb_organism_by_taxid/templates/stanza.html
@@ -15,11 +15,11 @@
   }
 
   a {
-    color: #256d80;
+    color: #6FA80C;
   }
 
   .link-btn {
-    background-color: #44b8cc;
+    background-color: #8FC31F;
     color: #FFF;
     padding: 4px 8px 2px;
     border-radius: 3px;
@@ -98,7 +98,7 @@
   }
 
   .capsule-list li {
-    border: 1px solid #44b8cc;
+    border: 1px solid #6FA80C;
     padding: 5px 10px;
     border-radius: 20px;
     margin-right: 8px;
