--- a/src/stanza/gmdb_component_by_gmoid/templates/stanza.html
+++ b/src/stanza/gmdb_component_by_gmoid/templates/stanza.html
@@ -15,7 +15,7 @@
   }
 
   a {
-    color: #256d80;
+    color: #6FA80C;
     text-decoration: underline;
   }
 
@@ -28,7 +28,7 @@
   }
 
   .link-btn {
-    background-color: #44b8cc;
+    background-color: #8FC31F;
     color: #FFF;
     padding: 4px 8px 2px;
     border-radius: 3px;
@@ -84,7 +84,7 @@
 {{#unless error}}
 
     <p class="gmo-id">
-      <span class="key">gmo-id: </span>
+      <span class="key">GMO ID: </span>
       <span class="value">{{result.gmo_id}}</span>
     </p>
     <p class="name">
