--- a/src/stanza/gmdb_medium_by_gmid/templates/stanza.html
+++ b/src/stanza/gmdb_medium_by_gmid/templates/stanza.html
@@ -15,11 +15,11 @@
   }
 
   a {
-    color: #256d80;
+    color: #6FA80C;
   }
 
   .link-btn {
-    background-color: #44b8cc;
+    background-color: #8FC31F;
     color: #FFF;
     padding: 4px 8px 2px;
     border-radius: 3px;
