ヘッダー マウスオーバー調整

--- a/src/less/main/structure.less
+++ b/src/less/main/structure.less
@@ -68,7 +68,7 @@ main{
           }
           &:hover{
             a{
-              color: @color-green;
+              color: @color-dark-green;
             }
           }
         }
