documentsページ追加

--- a/src/less/main/structure.less
+++ b/src/less/main/structure.less
@@ -71,6 +71,9 @@ main{
               color: @color-dark-green;
             }
           }
+          &.active a{
+            color: @color-dark-green;
+          }
         }
       }
     }
