--- a/src/pug/component.pug
+++ b/src/pug/component.pug
@@ -7,7 +7,8 @@ block vars
 block main
   h2 Component Information
   togostanza-gmdb_component_by_gmoid#info(gmo_id="")
-  h2 Related Media
+  h2 Media with &nbsp;
+    span#GMOID XXX
   togostanza-gmdb_media_by_gmoid#media(gmo_id="")
 
 block scripts
