--- a/src/pug/medium.pug
+++ b/src/pug/medium.pug
@@ -7,7 +7,8 @@ block vars
 block main
   h2 Medium Information
   togostanza-gmdb_medium_by_gmid#info(gm_id="")
-  h2 Related Organisms
+  h2 Organisms cultured in &nbsp;
+    span#GMID XXXX
   togostanza-gmdb_organisms_by_gmid#organisms(gm_id="")
 
 block scripts
