--- a/src/pug/organism.pug
+++ b/src/pug/organism.pug
@@ -7,7 +7,8 @@ block vars
 block main
   h2 Organism Information
   togostanza-gmdb_organism_by_taxid#info(tax_id="")
-  h2 Related Media
+  h2 Media with &nbsp;
+    span#TAXID TAXID
   togostanza-gmdb_media_by_taxid#media(tax_id="")
 
 
