--- a/src/stanza/gmdb_medium_by_gmid/templates/stanza.html
+++ b/src/stanza/gmdb_medium_by_gmid/templates/stanza.html
@@ -50,7 +50,7 @@
 
 
   .name .value {
-    font-size: 48px;
+    font-size: 40px;
   }
 
   h3 {
@@ -67,6 +67,7 @@
   .component-table {
     margin-top: 8px;
     border: 1px solid #ddd;
+    width: 100%;
   }
 
   .component-table th {
