--- a/src/stanza/gmdb_component_by_gmoid/templates/stanza.html
+++ b/src/stanza/gmdb_component_by_gmoid/templates/stanza.html
@@ -115,7 +115,7 @@
       <ul>
         {{#each result.roles}}
           <li>
-            <a href="{{host}}/component/{{gmo_id}}" target="_blank">{{label_en}}</a>
+            {{label_en}}
           </li>
         {{/each}}
       </ul>
