--- a/src/stanza/gmdb_organisms_by_gmid/templates/stanza.html
+++ b/src/stanza/gmdb_organisms_by_gmid/templates/stanza.html
@@ -35,18 +35,20 @@
   .id-list {
     border: 1px solid #CCC;
     border-radius: 5px;
+    width: 100%;
   }
 
-  .id-list li {
-    padding: 12px 8px;
+
+  .id-list td {
+    padding: 8px 8px;
     border-bottom: 1px solid #CCC;
-    display: flex;
-    flex-wrap: wrap;
   }
 
-  .id-list li:last-child {
-    border: none;
+  .id-list tr:nth-child(2n){
+    background-color: #f6f6f6;
   }
+
+
   .id-list span:first-child{
     /*width: 20%;*/
     min-width: 100px;
@@ -69,14 +71,14 @@
 {{#unless error}}
   <div class="wrapper">
     {{#if result.items.length}}
-      <ul class="id-list">
+      <table class="id-list">
         {{#each result.items}}
-          <li>
-            <span class="id"><a href="/organism/{{tax_id}}">{{tax_id}}</a></span>
-            <span class="label">{{label}}</span>
-          </li>
+          <tr>
+            <td class="id"><a href="/organism/{{tax_id}}">{{tax_id}}</a></td>
+            <td class="label">{{label}}</td>
+          </tr>
         {{/each}}
-      </ul>
+      </table>
     {{/if}}
     {{#unless result.items.length}}
       <p class="msg">{{msg}}</p>
