--- a/src/stanza/gmdb_list_media_by_gmids/templates/stanza.html
+++ b/src/stanza/gmdb_list_media_by_gmids/templates/stanza.html
@@ -17,20 +17,13 @@
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
   }
 
-  h2{
-    margin-bottom: 10px;
+  h2 {
+    font-size: 30px;
     font-weight: 600;
+    padding-left: 8px;
+    margin-bottom: 8px;
   }
 
-  .query-key {
-    background-color: #f5f4f3;
-    padding: 5px 10px;
-    color: #CC3366;
-    font-weight: 300;
-    border-radius: 3px;
-    display: inline-block;
-    margin-bottom: 5px;
-  }
 
   .id-list {
     border: 1px solid #CCC;
@@ -67,13 +60,8 @@
 {{/if}}{{/if}}
 
 {{#unless error}}
+  <h2>Media with &nbsp;{{#each result.query}}<span class="query-key">{{this}}</span>{{/each}}</h2>
   <div class="wrapper">
-    <h2>
-      Querying media with gm_id:
-      {{#each result.query}}
-        <span class="query-key">{{this}}</span>
-      {{/each}}
-    </h2>
     {{#if result.items.length}}
       <table class="id-list">
         {{#each result.items}}
