--- a/src/stanza/gmdb_list_organisms_by_keyword/templates/stanza.html
+++ b/src/stanza/gmdb_list_organisms_by_keyword/templates/stanza.html
@@ -18,18 +18,10 @@
   }
 
   h2{
-    margin-bottom: 10px;
+    font-size: 30px;
     font-weight: 600;
-  }
-
-  .query-key {
-    background-color: #f5f4f3;
-    padding: 5px 10px;
-    color: #CC3366;
-    font-weight: 300;
-    border-radius: 3px;
-    display: inline-block;
-    margin-bottom: 5px;
+    padding-left: 8px;
+    margin-bottom: 8px;
   }
 
   .id-list {
@@ -68,13 +60,8 @@
 {{/if}}{{/if}}
 
 {{#unless error}}
+  <h2>Organisms with &nbsp;{{#each result.query}}<span class="query-key">{{this}}</span>{{/each}}</h2>
   <div class="wrapper">
-    <h2>
-      Querying organisms with keyword:
-      {{#each result.query}}
-        <span class="query-key">{{this}}</span>
-      {{/each}}
-    </h2>
 
     {{#if result.items.length}}
       <table class="id-list">
