サイトタイトル修正

--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -11,7 +11,7 @@
 - var stanzaIDs = [];
 
 block vars
-- titleBase = "Medium DB";
+- titleBase = "TogoMedium";
 
 - title = titleChild ? titleChild + ' | ' + titleBase : titleBase;
 - bodyClasses.push(lev1ID);
