tid_roundtree -> media_alignment に変更

--- a/src/pug/media_alignment.pug
+++ b/src/pug/media_alignment.pug
@@ -5,7 +5,7 @@ block vars
   - stanzaIDs = ["gmdb_roundtree"]
 
 block main
-  h2 XXXXXX
+  h2 Media alignment
   togostanza-gmdb_roundtree#info(newick="http://keggoc-rdf.dbcls.jp/tmp/phylo2.newick")
 
 
