--- a/src/stanza/gmdb_media_by_gmoid/templates/stanza.html
+++ b/src/stanza/gmdb_media_by_gmoid/templates/stanza.html
@@ -37,7 +37,7 @@
     border-radius: 5px;
     width: 100%;
   }
-  
+
   .id-list tr:nth-child(2n) {
     background-color: #f6f6f6;
   }
@@ -45,6 +45,10 @@
   .id-list td {
     padding: 8px 8px;
     border-bottom: 1px solid #CCC;
+  }
+
+  .id-list td.id {
+    width: 20%;
   }
 
 
