--- a/src/stanza/gmdb_list_media_by_keyword/templates/stanza.html
+++ b/src/stanza/gmdb_list_media_by_keyword/templates/stanza.html
@@ -28,6 +28,10 @@
     border-bottom: 1px solid #CCC;
   }
 
+  .id-list td.id{
+    width: 20%;
+  }
+
   .id-list tr:nth-child(2n){
     background-color: #f6f6f6;
   }
