末端のノードも反応するように

--- a/src/stanza/gmdb_roundtree/templates/stanza.html
+++ b/src/stanza/gmdb_roundtree/templates/stanza.html
@@ -10,9 +10,10 @@
   font: 10px sans-serif;
 }
 
-.branchNode {
+.branchNode, .leafNode {
   cursor: pointer;
 }
+
 
 .aeNode circle {
   stroke: #89c4ff;
