--- a/src/stanza/gms_by_tid_3/templates/stanza.html
+++ b/src/stanza/gms_by_tid_3/templates/stanza.html
@@ -1,64 +1,127 @@
+<!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">  -->
+<style type="text/css">
+  @import url('https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300;600&display=swap');
 
- <!--  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">  -->
-  <style type="text/css">
+  .wrapper {
+    font-family: 'Fira Sans Condensed', sans-serif;
+    font-weight: 300;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: #333;
+    position: relative;
+    padding: 12px;
+    border-radius: 5px;
+    background-color: #fff;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
 
-    /* 'entypo' https://weloveiconfonts.com/ */
-    @import url(https://weloveiconfonts.com/api/?family=entypo);
-    [class*="entypo-"]:before {
-       font-family: 'entypo', sans-serif;
-    }
+  }
+  .inner{
+    overflow-x: auto;
+  }
+  
 
-    .thead {
-      border-bottom-style: inset;
-    }
-    .header {
-      padding-right: 20px;
-      padding: 10px 10px 10px 10px;
-    }
-    .organism {
-      padding: 4px 10px 4px 2px;
-      max-width: 160px;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      white-space: nowrap;
-    }
-    .medium {
-      padding: 8px 20px 2px 2px;
-    }
-    .component {
-      padding: 8px 2px 2px 2px;
-    }
+  table tr:nth-child(1n) {
+    background-color: #ffffff;
+  }
 
-    a {
-      color: #007bff;
-      text-decoration: none;
-    }
-    .role_component_style {
-      color: #4ea0c9;
-    }
-    .component_style {
-      color: #48d1cc;
-    }
-    div#popup {
-      font-weight: bold;
-      font-size: 14px;
-    }
-    .component_label {
-      white-space: nowrap;
-      text-overflow: ellipsis;
-      overflow: hidden;
-      height: 180px;
-      max-width: 15px;
-    }
-    .component_label p{
-      transform:rotate(90deg);
-      margin-top: -80px;
-     text-overflow: ellipsis;
-    }
+  table tr:nth-child(2n) {
+    background-color: #f6f6f6;
+  }
 
-  </style>
+  table {
+    background-color: #fff;
+    border-collapse: collapse;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    border-right: 1px solid #eee;
+  }
 
-<div id="table_area"></div>
+  td, th {
+    border-left: 1px solid #eee;
+    padding: 4px 8px 2px;
+    box-sizing: border-box;
+    height: auto;
+    line-height: 1.3;
+  }
+  tfoot td{
+    border-top:1px solid #eee;
+  }
 
-</table>
+
+  .thead {
+    border-bottom-style: inset;
+  }
+
+  .header {
+    padding-right: 20px;
+    padding: 10px 10px 10px 10px;
+  }
+
+
+  .organism {
+    max-width: 160px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+  }
+
+  .medium {
+  }
+
+  .component {
+  }
+
+  a {
+    color: #007bff;
+    text-decoration: none;
+  }
+
+  .entypo-db-shape{
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-radius: 3px;
+  }
+
+  .role_component_style {
+    background-color: #4ea0c9;
+  }
+
+  .component_style {
+    background-color: #48d1cc;
+  }
+
+  div#popup {
+    font-weight: bold;
+    font-size: 14px;
+    position: fixed;
+  }
+
+  .component_label {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    /*overflow: hidden;*/
+    /*height: 180px;*/
+    max-width: 15px;
+    text-align: left;
+    vertical-align: top;
+  }
+
+  .component_label p {
+    /*transform: rotate(90deg);*/
+    /*margin-top: -80px;*/
+    text-overflow: ellipsis;
+    writing-mode: vertical-rl;
+    margin: 0;
+    text-align: left;
+    vertical-align: top;
+  }
+
+</style>
+
+<div class="wrapper">
+  <div class="inner">
+    <div id="table_area"></div>
+  </div>
+</div>
 
