--- a/src/stanza/gms_by_tid_3/templates/stanza.html
+++ b/src/stanza/gms_by_tid_3/templates/stanza.html
@@ -16,9 +16,10 @@
 
   }
   .inner{
-    overflow-x: auto;
+    /*overflow-x: auto;*/
   }
-  
+
+
 
   table tr:nth-child(1n) {
     background-color: #ffffff;
@@ -42,6 +43,7 @@
     box-sizing: border-box;
     height: auto;
     line-height: 1.3;
+    text-align: left;
   }
   tfoot td{
     border-top:1px solid #eee;
