--- a/src/pug/medium.pug
+++ b/src/pug/medium.pug
@@ -2,11 +2,12 @@ extends _template/_base
 
 block vars
   - lev = 1
-  - stanzaIDs = ["gmdb_medium_by_gmid", "gmdb_organisms_by_gmid"]
+  - stanzaIDs = ["gmdb_medium_by_gmid", "gmdb_organisms_by_gmid","gmdb_meta_list"]
 
 block main
   h2 Medium Information
   togostanza-gmdb_medium_by_gmid#info(gm_id="")
+  togostanza-gmdb_meta_list#similar(api_url="", limit="10", title="", column_names="true")
   h2 Organisms cultured in &nbsp;
     span#GMID XXXX
   togostanza-gmdb_organisms_by_gmid#organisms(gm_id="")
