ヘッダー修正

--- a/src/pug/media_alignment.pug
+++ b/src/pug/media_alignment.pug
@@ -3,6 +3,7 @@ extends _template/_base
 block vars
   - lev = 1
   - stanzaIDs = ["gmdb_roundtree"]
+  - lev1ID = "alignment"
 
 block main
   h2 Media alignment
