--- a/src/stanza/gmdb_phenotype_info/templates/stanza.html
+++ b/src/stanza/gmdb_phenotype_info/templates/stanza.html
@@ -25,6 +25,7 @@
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 8px;
+    padding-left: 8px;
   }
   table{
     font-size: 14px;
@@ -42,10 +43,11 @@
   }
 </style>
 
+<header>
+  <h2>Phenotype Information</h2>
+</header>
 <div class="wrapper">
-  <header>
-    <h2>Phenotype Information</h2>
-  </header>
+
   <table>
     <tr>
       <th>Show cell shape</th>
