--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -67,8 +67,9 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
         nav
           ul
             li(class = `${lev1ID === 'top' ? 'active' : ''}`): a(href="/") Home
-            li(class = `${lev1ID === 'about' ? 'active' : ''}`): a(href="/about") Documents
-            li: a(href="/media_alignment") Media alignment
+            li(class = `${lev1ID === 'about' ? 'active' : ''}`): a(href="/about") About
+            li(class = `${lev1ID === 'statistics' ? 'active' : ''}`): a(href="/statistics") Statistics
+            li(class = `${lev1ID === 'alignment' ? 'active' : ''}`): a(href="/media_alignment") Media alignment
           form(method="GET" action="/")
             input(placeholder="search", name="query")
     main
