statsページ作成

--- a/src/less/main/structure.less
+++ b/src/less/main/structure.less
@@ -103,8 +103,12 @@ h2{
   margin-top: 48px;
 }
 
+
 togostanza-gmdb_meta_list, togostanza-gmdb_phenotype_info{
   margin-top: 48px;
   display: block;
+}
+main togostanza-gmdb_meta_list:first-child{
+  margin-top: 0;
 }
 
