--- a/src/pug/statistics.pug
+++ b/src/pug/statistics.pug
@@ -6,7 +6,7 @@ block vars
   - stanzaIDs = ["gmdb_meta_list"]
 
 block main
-  togostanza-gmdb_meta_list(api_url="http://growthmedium.org/sparqlist/api/gmdb_stat_phylum_gm", limit="", title="this is title", column_names="true")
+  togostanza-gmdb_meta_list(api_url="http://growthmedium.org/sparqlist/api/gmdb_stat_phylum_gm", limit="", title="The number of growth media per phylum", column_names="true")
 
 
 block scripts
