新規スタンザ組み込み

--- a/src/less/main/structure.less
+++ b/src/less/main/structure.less
@@ -104,11 +104,14 @@ h2{
 }
 
 
-togostanza-gmdb_meta_list, togostanza-gmdb_phenotype_info{
+.stanza-wrapper, togostanza-gmdb_meta_list, togostanza-gmdb_phenotype_info{
   margin-top: 48px;
+  margin-bottom: 24px;
   display: block;
 }
-main togostanza-gmdb_meta_list:first-child{
+main .stanza-wrapper:first-child{
   margin-top: 0;
 }
+
+
 
