--- a/src/pug/component.pug
+++ b/src/pug/component.pug
@@ -2,14 +2,12 @@ extends _template/_base
 
 block vars
   - lev = 1
-  - stanzaIDs = ["gmdb_component_by_gmoid", "gmdb_media_by_gmoid"]
+  - stanzaIDs = ["gmdb_component_by_gmoid", "gmdb_meta_list"]
 
 block main
   h2 Component Information
   togostanza-gmdb_component_by_gmoid#info(gmo_id="")
-  h2 Media with &nbsp;
-    span#GMOID XXX
-  togostanza-gmdb_media_by_gmoid#media(gmo_id="")
+  div#media.stanza-wrapper
 
 block scripts
   script(src=`${pathToJS}component.js`)
