--- a/src/pug/organism.pug
+++ b/src/pug/organism.pug
@@ -2,16 +2,13 @@ extends _template/_base
 
 block vars
   - lev = 1
-  - stanzaIDs = ["gmdb_organism_by_taxid", "gmdb_media_by_taxid", "gmdb_phenotype_info"]
+  - stanzaIDs = ["gmdb_organism_by_taxid", "gmdb_phenotype_info", "gmdb_meta_list"]
 
 block main
   h2 Organism Information
   togostanza-gmdb_organism_by_taxid#info(tax_id="")
   togostanza-gmdb_phenotype_info#phenotype
-  h2 Media with &nbsp;
-    span#TAXID TAXID
-  togostanza-gmdb_media_by_taxid#media(tax_id="")
-
+  div#media.stanza-wrapper
 
 block scripts
   script(src=`${pathToJS}organism.js`)
