--- a/src/pug/top.pug
+++ b/src/pug/top.pug
@@ -2,7 +2,7 @@ extends _template/_base
 
 block vars
   - lev1ID = "top";
-  - stanzaIDs = ["gmdb_list_media_by_gmids","gmdb_list_media_by_keyword","gmdb_list_components_by_gmoids","gmdb_list_components_by_keyword","gmdb_list_organisms_by_taxids","gmdb_list_organisms_by_keyword"]
+  - stanzaIDs = ["gmdb_meta_list"]
 
 
 block main
@@ -12,12 +12,12 @@ block main
     | Terms should be separated by "," if multiple queries are requested.<br>
     | e.g. Glucose, GMO_001010, 315405
   .stanza-wrapper#stanzaWrapper
-    togostanza-gmdb_list_media_by_gmids#mediaByIDs.stanza(gm_ids="")
-    togostanza-gmdb_list_media_by_keyword#mediaByKeyword.stanza(keyword="")
-    togostanza-gmdb_list_components_by_gmoids#componentsByIDs.stanza(gmo_ids="")
-    togostanza-gmdb_list_components_by_keyword#componentsByKeyword.stanza(keyword="")
-    togostanza-gmdb_list_organisms_by_taxids#organismsByIDs.stanza(tax_ids="")
-    togostanza-gmdb_list_organisms_by_keyword#organismsByKeyword.stanza(keyword="")
+    //togostanza-gmdb_list_media_by_gmids#mediaByIDs.stanza(gm_ids="")
+    //togostanza-gmdb_list_media_by_keyword#mediaByKeyword.stanza(keyword="")
+    //togostanza-gmdb_list_components_by_gmoids#componentsByIDs.stanza(gmo_ids="")
+    //togostanza-gmdb_list_components_by_keyword#componentsByKeyword.stanza(keyword="")
+    //togostanza-gmdb_list_organisms_by_taxids#organismsByIDs.stanza(tax_ids="")
+    //togostanza-gmdb_list_organisms_by_keyword#organismsByKeyword.stanza(keyword="")
 
 
 block scripts
