--- a/src/stanza/gmdb_meta_list/templates/stanza.html
+++ b/src/stanza/gmdb_meta_list/templates/stanza.html
@@ -13,6 +13,21 @@
     -moz-osx-font-smoothing: grayscale;
     color: #333;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+    position: relative;
+  }
+
+  .wrapper[data-is-loading]:after{
+    content: "loading...";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    background-color: rgba(255,255,255,0.8);
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 5px;
   }
 
   table {
@@ -66,50 +81,47 @@
       <h2>{{title}}</h2>
     </header>
   {{/if}}
-  <div class="wrapper">
-    {{#if data}}
-      <table>
-        {{#if showColumnNames}}
-          <tr>
-            {{#each columnLabels}}
-              <th>{{this}}</th>
-            {{/each}}
-          </tr>
+  <div class="wrapper" {{#if isLoading}} data-is-loading{{/if}}>
+  {{#if data}}
+    <table>
+      {{#if showColumnNames}}
+        <tr>
+          {{#each columnLabels}}
+            <th>{{this}}</th>
+          {{/each}}
+        </tr>
+      {{/if}}
+      {{#each data}}
+        <tr>
+          {{#each this}}
+            {{#if this.nowrap}}
+            <td class="no-wrap">
+            {{/if}}
+            {{#unless this.nowrap}}
+            <td>
+            {{/unless}}
+            {{#if this.href}}
+              <a href="{{this.href}}">{{this.label}}</a>
+            {{/if}}
+            {{#unless this.href}}
+              {{this.label}}
+            {{/unless}}
+          </td>
+          {{/each}}
+        </tr>
+      {{/each}}
+    </table>
+    <footer>
+      <div>
+        {{#if hasPrev}}
+          <button id="btnPrev">PREV</button>
         {{/if}}
-        {{#each data}}
-          <tr>
-            {{#each this}}
-              {{#if this.nowrap}}
-              <td class="no-wrap">
-              {{/if}}
-              {{#unless this.nowrap}}
-              <td>
-              {{/unless}}
-              {{#if this.href}}
-                <a href="{{this.href}}">{{this.label}}</a>
-              {{/if}}
-              {{#unless this.href}}
-                {{this.label}}
-              {{/unless}}
-            </td>
-            {{/each}}
-          </tr>
-        {{/each}}
-      </table>
-      <footer>
-        <div>
-          {{#if hasPrev}}
-            <button id="btnPrev">PREV</button>
-          {{/if}}
-          {{#if hasNext}}
-            <button id="btnNext">NEXT</button>
-          {{/if}}
-        </div>
-        <p class="info">{{info}}</p>
-      </footer>
-    {{/if}}
-    {{#unless data}}
-      <p>loading data...</p>
-    {{/unless}}
-  </div>
+        {{#if hasNext}}
+          <button id="btnNext">NEXT</button>
+        {{/if}}
+      </div>
+      <p class="info">{{info}}</p>
+    </footer>
+{{/if}}
+</div>
 {{/if}}
