表現型Stanzaの表示調整

--- a/src/stanza/gmdb_phenotype_info/templates/stanza.html
+++ b/src/stanza/gmdb_phenotype_info/templates/stanza.html
@@ -50,23 +50,19 @@
 
   <table>
     <tr>
-      <th>Show cell shape</th>
+      <th>Cell shape</th>
       <th>Temperature range</th>
-      <th>Show motility</th>
+      <th>Motility</th>
       <th>Staining</th>
       <th>Energy source</th>
     </tr>
     <tr>
-      <td>Oval shape</td>
-      <td>Mesophilic</td>
-      <td>Nonmotile</td>
-      <td>Gram negative</td>
-      <td>Photosynthetic</td>
+      <td>N/A</td>
+      <td>N/A</td>
+      <td>N/A</td>
+      <td>N/A</td>
+      <td>N/A</td>
     </tr>
-
-
-
-
 
   </table>
 </div>
