--- a/src/pug/_template/_base.pug
+++ b/src/pug/_template/_base.pug
@@ -23,14 +23,11 @@ block vars
 - var pathToJS = pathToAssets + "js/";
 - var pathToCSS = pathToAssets + "css/";
 - var pathToLibs = pathToAssets + "libs/";
-- var pathToStanza = pathToRoot + "stanza/";
+- var pathToStanza = "https://dbcls.github.io/togomedium-stanza/";
 - var pathToSVG = pathToAssets + "images/svg/";
 - var pathToImgLG = pathToAssets + "images/lg/";
 - var pathToImgMD = pathToAssets + "images/md/";
 - var pathToImgSM = pathToAssets + "images/sm/";
-
-
-
 
 doctype html
 html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
@@ -42,10 +39,8 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
     meta(name="description", content=`${meta.description}`)
     meta(name="keywords", content=``)
     link(href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:wght@300&display=swap" rel="stylesheet")
-    script(src="https://cdn.jsdelivr.net/combine/npm/@babel/polyfill@7.2.5/dist/polyfill.min.js,npm/@ungap/url-search-params@0.1.2/min.js,npm/whatwg-fetch@3.0.0/dist/fetch.umd.js" crossorigin="")
-    script(src="https://cdn.jsdelivr.net/npm/@webcomponents/webcomponentsjs@1.3.0/webcomponents-loader.js" crossorigin="")
     each stanzaID in stanzaIDs
-      link(rel="import", href=`${pathToStanza}${stanzaID}`)
+      script(src=`${pathToStanza}${stanzaID}.js` type="module" async)
 
     link(href=`${pathToLibs}html5reset.css`, rel="stylesheet", type="text/css")
     link(href=`${pathToCSS}main.css`, rel="stylesheet", type="text/css")
@@ -60,7 +55,6 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
     meta(property='og:url', content=``)
     title= title
   body(class=bodyClasses)
-    include ../_include/header.html
     header.site-header
       .inner
         a(href="/"): figure.logo
@@ -76,3 +70,4 @@ html(lang = 'ja', xmlns:og="http://ogp.me/ns#")
       block main
     script(src=`${pathToLibs}anime.min.js`)
     block scripts
+    include ../_include/header.html
