--- a/src/pug/statistics.pug
+++ b/src/pug/statistics.pug
@@ -3,10 +3,11 @@ extends _template/_base
 block vars
   - lev = 1
   - lev1ID = "statistics"
-  - stanzaIDs = ["gmdb_meta_list"]
+  - stanzaIDs = ["gmdb-meta-list"]
 
 block main
-  togostanza-gmdb_meta_list(api_url="http://growthmedium.org/sparqlist/api/gmdb_stat_phylum_gm", limit="", title="The number of growth media per phylum", column_names="true")
+  div.stanza-wrapper
+    togostanza-gmdb-meta-list(api_url="http://growthmedium.org/sparqlist/api/gmdb_stat_phylum_gm", limit="", title="The number of growth media per phylum", column_names="true")
 
 
 block scripts
