--- a/src/less/main/structure.less
+++ b/src/less/main/structure.less
@@ -104,13 +104,12 @@ h2{
 }
 
 
-.stanza-wrapper, togostanza-gmdb_meta_list, togostanza-gmdb_phenotype_info{
-  margin-top: 48px;
+.stanza-wrapper{
   margin-bottom: 24px;
   display: block;
-}
-main .stanza-wrapper:first-child{
-  margin-top: 0;
+  & + .stanza-wrapper{
+    margin-top: 48px;
+  }
 }
 
 
