--- a/src/pug/taxon.pug
+++ b/src/pug/taxon.pug
@@ -2,11 +2,14 @@ extends _template/_base
 
 block vars
   - lev = 1
-  - lev1ID = "statistics"
-  - stanzaIDs = ["gmdb_meta_list"]
+  - stanzaIDs = ["gmdb-taxon-by-taxid"]
 
 block main
-  p(style="font-size:24px; text-align:center; margin-top:54px;") Under Construction
+  h2 Taxon Information
+  div.stanza-wrapper
+    togostanza-gmdb-taxon-by-taxid#info(tax_id="", togostanza-about-link-placement="none")
+
 
 
 block scripts
+  script(src=`${pathToJS}taxon.js`)
